--- a/past.html
+++ b/past.html
@@ -10,8 +10,8 @@
     <aside class="profile-image">
     </aside>
     <section class="profile-info">
-      <h1 class="first-name">Joe</h1>
-      <h1 class="second-name">Gorst</h1>
+      <h1 class="first-name">Past</h1>
+      <h1 class="second-name">Projects</h1>
       <h2>ABOUT</h2>
       <p>
         hi, i'm joe! programmer and enthusiast :D
