--- a/workingon.html
+++ b/workingon.html
@@ -10,27 +10,17 @@
     <aside class="profile-image">
     </aside>
     <section class="profile-info">
-      <h1 class="first-name">Joe</h1>
-      <h1 class="second-name">Gorst</h1>
+      <h1 class="first-name">In</h1>
+      <h1 class="second-name">Progress</h1>
       <h2>ABOUT</h2>
       <p>
-        hi, i'm joe! programmer and enthusiast :D
-        studying computer science, intern at opengenus.
-        take a look at some of my work below!
+        machine learing boids
+        using python, tensorflow and keras. the aim of this project
+        is to research the ability to train the transition rule of a cellular automaton.
       </p>
       <aside class="social-media-icons">
         <a href="https://github.com/yre5tra" target="_blank">
-          <i class="fab fa-github"></i>
-        </a>
-        <a href="https://twitter.com/yre5tra" target="_blank">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://codepen.io/yre5tra" target="_blank">
-          <i class="fab fa-codepen"></i>
-        </a>
-        </a>
-        <a href="https://www.linkedin.com/in/joe-gorst-075151218/" target="_blank">
-          <i class="fab fa-linkedin"></i>
+          <i class="fab fa-github"> github repo</i>
         </a>
       </aside>
     </section>
