--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <p><strong>Projects: </strong></p>
     <a href="recent.html"><strong></strong>most recent</a>
     <a href="workingon.html"><strong></strong>working on</a>
-    <a href="past.html"><strong></strong>past</a>
+    <a href="hello_qubit.html"><strong></strong>Quantum</a>
     <a href="index.html"><strong></strong>home</a>
   </section>
 </main>
